--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,11 +1,18 @@
 <!-- public/index.html -->
 <!doctype html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Bem-vindo</title>
-</head>
-<body>
-	<h1>Bem-vindo ao Contatooh</h1>
+<html ng-app="contatooh">
+	<head>
+		<meta name="viewport" content="width=device-width">
+		<meta charset="UTF-8">
+		<script src="vendor/angular/angular.js"></script>
+		<script src="vendor/angular-route/angular-route.js"></script>
+		<script src="js/main.js"></script>
+		<script src="js/controllers/ContatosController.js"></script>
+		<script src="js/controllers/ContatoController.js"></script>
+
+		<title>Bem-vindo</title>
+	</head>
+	<body>
+		<div ng-view></div>
 	</body>
 </html>
