Chapter 4 finished - Angular

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,9 +10,12 @@
 		<script src="js/controllers/ContatosController.js"></script>
 		<script src="js/controllers/ContatoController.js"></script>
 
+		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
+
 		<title>Bem-vindo</title>
 	</head>
-	<body>
+	<body class="container">
 		<div ng-view></div>
 	</body>
 </html>
